# bedrock-assembler

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: run_pytest.yaml
bedrock-assembler/: command.py  component.py  entity.py  item.py
brockassemble/: command.py  component.py  entity.py  exceptions.py  item.py
test/command/: test_event.py  test_execute.py  test_kill.py  test_selector.py  test_summon.py  test_tp.py
test/commands/: test_command_stem.py  test_effect.py  test_summon_rider.py  test_tag.py
test/component/: test_class_component.py  test_component_area_attack.py  test_component_attack.py  test_component_collision_box.py  test_component_family.py  test_component_follow_range.py  test_component_health.py  test_component_list_pathfinding.py  test_component_mark_variant.py  test_component_melee_attack.py  test_component_movement.py  test_component_nav_generic.py  test_component_no_dmg.py  test_component_no_knockback.py  test_component_random_look.py  test_component_ranged_attack.py  test_component_rideable.py  test_component_scale.py  test_component_shooter.py  test_component_skin_id.py  test_component_stroll.py  test_component_timer.py  test_component_variant.py  test_tag_sensor.py  test_tag_sensor_list.py
test/entity/: test_ancostate.py  test_animation.py  test_animationcontroller.py  test_animationfile.py  test_animtimelineitem.py  test_behaviors.py  test_componentgroup.py  test_entitygraphics.py  test_entityproperty.py  test_event.py  test_eventrandomizer.py  test_propertybool.py  test_propertyenum.py  (+1 more)
(+1 files in other folders)
