[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bedrock_assembler"
version = "0.2.3"
description = "A Python library to automate writing JSON for Minecraft Bedrock Edition add-ons"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/TheBlackMezek/bedrock-assembler"
"Bug Tracker" = "https://github.com/TheBlackMezek/bedrock-assembler/issues"
